--- a/homeDir/dotConfig/waybar/style.css
+++ b/homeDir/dotConfig/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Monaco;
+    font-family: 霞骛文楷等宽;
     font-size: 15px;
 }
 
